--- a/.github/workflows/reflect-git-page.yml
+++ b/.github/workflows/reflect-git-page.yml
@@ -2,7 +2,7 @@ name : reflect-git-page
 run name: ${{ github.actor}}가 깃허브 페이지를 수정했습니다.
 on : [push]
 jobs : 
-  upload-statics
+  upload-statics:
     runs-on : ubutun-22.04
     steps:
       - uses : actions/checkout@v3
