--- a/.github/workflows/reflect-git-page.yml
+++ b/.github/workflows/reflect-git-page.yml
@@ -6,4 +6,8 @@ jobs :
     runs-on : ubutun-22.04
     steps:
       - uses : actions/checkout@v3
+      - uses : actions/setup-node@v3
+        with:
+          node-version : 18
+      - run : npm install
       - run : npm run deploy
