--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "psycoma99.github.io",
+  "name": "logsomething",
+  "homepage": "psycoma99.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "homepage": "psycoma99.github.io",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
