--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logsomething",
-  "homepage": "psycoma99.github.io",
+  "homepage": "https://psycoma99.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,9 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
